--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-framework-docs",
+  "name": "my-project",
   "type": "module",
   "private": true,
   "scripts": {
@@ -10,9 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^4.1.3",
-    "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "nuxt": "^3.9.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.14.0",
